# fraudulent-chargeback-detector

./: .gitattributes  Fraud.csv  README.md  generate_large_dataset.py  generate_realistic_data.py  main.py  pyproject.toml  requirements.txt  run.py  validate_metrics.py
app/: api.py  data_preprocessing.py  main.py  models.py
fraud-detection/: fraudTest_cleaned.csv  fraudTrain_cleaned.csv
frontend/: index.html
results/models/: lightgbm_20250809_172211.joblib  randomforest_20250809_172211.joblib  xgboost_20250809_172211.joblib
results/runs/20250815_214053/: processor_state.joblib
results/runs/20250815_214053/models/: lightgbm.joblib  xgboost.joblib
results/validation/20250809_172510/: classification_reports.json  feature_importances.json  metrics.json
