[project]
name = "fraudulent-chargeback-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "imbalanced-learn==0.11.0",
    "isort>=5.12.0",
    "joblib>=1.3.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "requests>=2.32.4",
    "scikit-learn==1.3.2",
    "seaborn>=0.12.0",
    "structlog>=23.0.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.24.0",
    "xgboost>=1.7.0",
]
